--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,3 +175,96 @@ button:hover {
     background: #0056b3;
     cursor: pointer;
 }
+.logo_articles{
+    height: 600px;
+    background-image: url('../images/tunel.jpg');
+    background-size: cover;
+    text-align: center;
+}
+
+.link{
+    color: white;
+}
+
+.container{
+    border: solid 3px #9fa59d;
+    margin: 30px 100px;
+    padding: 10px;
+    display: flex;
+}
+
+.post_img{
+    width: 270px;
+    overflow: hidden;
+}
+
+.post_img img{
+    height: 390px;
+}
+
+.article_text{
+    max-width: 850px;
+    padding: 20px;
+}
+
+.text{
+    font-size: 15px;
+    text-align: justify;
+    text-indent: 15px;
+    max-height: 160px;
+    overflow: hidden;
+}
+
+.article_text h3{
+    color: #c4ff9e;
+}
+
+.details{
+    color: #9fa59d;
+    font-size: 15px;
+    margin: 30px 0
+}
+
+.ful_text{
+    font-size: 25px;
+    text-align: justify;
+    text-indent: 15px;
+}
+
+.full_post_container{
+    border: solid 3px #9fa59d;
+    margin: 30px 100px 30px 100px;
+    padding: 20px;
+}
+
+.full_post_img{
+    text-align: center;
+    padding-top: 20px;
+}
+
+.delete_form{
+    text-align: left;
+}
+
+.post_text_link{
+    border: solid 3px #9fa59d;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+}
+
+.post_text_link:hover{
+    border: solid 3px #c4ff9e;
+
+}
+
+.post_text_link a{
+    color: white;
+    font-size: 25px;
+    text-decoration: none;
+
+
+}
+.post_text_link a:hover{
+    color: #c4ff9e;
+}
