requirement.txt, buttons

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -22,8 +22,8 @@
                 <a href="{{ url_for('logout') }}"
                    class="button_in">Logout</a>
                 {% else %}
-                <a href="/admin" class="button_in">Sing in</a>
-                <a href="/form" class="button_up">Sing up</a>
+                <a href="/admin" class="button_in">Sign in</a>
+                <a href="/form" class="button_up">Sign up</a>
                 {% endif %}
 
             </div>
